--- a/T2S/manifest.json
+++ b/T2S/manifest.json
@@ -13,9 +13,9 @@
     "type": "module"
   },
   "icons": {
-    "16": "extension_icon.png",
-    "48": "extension_icon.png",
-    "128": "extension_icon.png"
+    "16": "./elements/extension_icon.png",
+    "48": "./elements/extension_icon.png",
+    "128": "./elements/extension_icon.png"
   },
   "content_scripts": [
     {
