--- a/T2S/manifest.json
+++ b/T2S/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.0",
   "action": {
     "default_popup": "index.html",
-    "default_icon": "extension_icon.png"
+    "default_icon": "./elements/extension_icon.png"
   },
   "permissions": ["contextMenus", "storage"],
   "background": {
